espace-user update

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,4 +12,5 @@
 @import'./include/connexion.scss';
 @import'./include/media.scss';
 @import'./include/connexion-user.scss';
+@import'./include/profil.scss';
 
