--- a/style.css
+++ b/style.css
@@ -186,4 +186,30 @@ a:visited {
   margin-bottom: 20px;
 }
 
+/*  connexion-user  */
+#info {
+  padding-top: 110px !important;
+}
+
+#affichage {
+  padding-top: 110px !important;
+}
+
+#list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+#list a {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #fff9e7;
+}
+#list a:hover {
+  background-color: #FF6E31;
+}
+
 /*# sourceMappingURL=style.css.map */
