epspace admin update

--- a/sass/include/admin.scss
+++ b/sass/include/admin.scss
@@ -1,4 +1,4 @@
-/*  profil-user  */
+/*  admin espace  */
 
 #info 
 {
@@ -8,11 +8,6 @@
 #affichage
 {
     padding-top: 110px!important;
-}
-
-#affichage-admin
-{
-    padding-top: 140px!important;
 }
 
 #list 
@@ -33,6 +28,6 @@
     
     a:hover
     {
-        background-color: #FF6E31; 
+        background-color: white; 
     }
 }
