--- a/sass/include/global.scss
+++ b/sass/include/global.scss
@@ -18,3 +18,13 @@ a {
 a:visited{
     color: white;
 }
+
+#cart
+{
+    padding-top: 120px!important;
+}
+
+#product
+{
+    padding-top: 120px!important;
+}
