--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,8 +9,8 @@
 @import'./include/banner-ads.scss';
 @import'./include/top-sale.scss';
 @import'./include/special-price.scss';
-@import'./include/connexion.scss';
 @import'./include/media.scss';
 @import'./include/connexion-user.scss';
 @import'./include/profil.scss';
+@import'./include/admin.scss';
 
