--- a/sass/include/media.scss
+++ b/sass/include/media.scss
@@ -43,3 +43,27 @@
     }
 
 }
+
+@media (max-width: 770px) 
+{
+    #prod{
+        width: 100px!important;
+
+        h6
+        {
+            font-size: 10px!important;
+        }
+
+        .price
+        {
+            font-size: 12px!important;
+        }
+        
+        button
+        {
+            font-size: 10px!important;
+            padding: 0;
+            padding: 5px;
+        }
+    }
+}
